--- a/Hotel_Booking_Analysis_Capstone_Project.ipynb
+++ b/Hotel_Booking_Analysis_Capstone_Project.ipynb
@@ -615,9 +615,81 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "df_hotel.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1DrsK8bbLoOe",
+        "outputId": "b0476be5-1fd8-434d-a924-0152fdccf50f"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 119390 entries, 0 to 119389\n",
+            "Data columns (total 32 columns):\n",
+            " #   Column                          Non-Null Count   Dtype  \n",
+            "---  ------                          --------------   -----  \n",
+            " 0   hotel                           119390 non-null  object \n",
+            " 1   is_canceled                     119390 non-null  int64  \n",
+            " 2   lead_time                       119390 non-null  int64  \n",
+            " 3   arrival_date_year               119390 non-null  int64  \n",
+            " 4   arrival_date_month              119390 non-null  object \n",
+            " 5   arrival_date_week_number        119390 non-null  int64  \n",
+            " 6   arrival_date_day_of_month       119390 non-null  int64  \n",
+            " 7   stays_in_weekend_nights         119390 non-null  int64  \n",
+            " 8   stays_in_week_nights            119390 non-null  int64  \n",
+            " 9   adults                          119390 non-null  int64  \n",
+            " 10  children                        119386 non-null  float64\n",
+            " 11  babies                          119390 non-null  int64  \n",
+            " 12  meal                            119390 non-null  object \n",
+            " 13  country                         118902 non-null  object \n",
+            " 14  market_segment                  119390 non-null  object \n",
+            " 15  distribution_channel            119390 non-null  object \n",
+            " 16  is_repeated_guest               119390 non-null  int64  \n",
+            " 17  previous_cancellations          119390 non-null  int64  \n",
+            " 18  previous_bookings_not_canceled  119390 non-null  int64  \n",
+            " 19  reserved_room_type              119390 non-null  object \n",
+            " 20  assigned_room_type              119390 non-null  object \n",
+            " 21  booking_changes                 119390 non-null  int64  \n",
+            " 22  deposit_type                    119390 non-null  object \n",
+            " 23  agent                           103050 non-null  float64\n",
+            " 24  company                         6797 non-null    float64\n",
+            " 25  days_in_waiting_list            119390 non-null  int64  \n",
+            " 26  customer_type                   119390 non-null  object \n",
+            " 27  adr                             119390 non-null  float64\n",
+            " 28  required_car_parking_spaces     119390 non-null  int64  \n",
+            " 29  total_of_special_requests       119390 non-null  int64  \n",
+            " 30  reservation_status              119390 non-null  object \n",
+            " 31  reservation_status_date         119390 non-null  object \n",
+            "dtypes: float64(4), int64(16), object(12)\n",
+            "memory usage: 29.1+ MB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "* **We notice that there are 32 columns and 119391 rows in the df_hotel file.**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "f_TIcqUFP9_k"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "1DrsK8bbLoOe"
+        "id": "igBAO5b2RU1r"
       },
       "execution_count": null,
       "outputs": []
