--- a/Hotel_Booking_Analysis_by_Rahul_Capstone_Project.ipynb
+++ b/Hotel_Booking_Analysis_by_Rahul_Capstone_Project.ipynb
@@ -1353,10 +1353,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bEtz11x74Qr5"
+        "id": "kXdHnzNcNOq7"
       },
       "source": [
-        "# Looking for and handling duplicates rows Nan , Null and Missing Values."
+        "# ***Cleaning the data***\n",
+        "\n",
+        "* Identify duplicated rows and remove the same.\n",
+        "* Calculate percentage values of null vallues of each columns.\n",
+        "* Combine the null_value and null_value_percentage series in the dataframe using concat method.\n",
+        "* Replace NaN values with 0 for heading Agent,Company\n",
+        "* Replace NaN values with their mean values for heading children\n",
+        "* Modify datatype from float to int64 for heading Agent,Company,Children\n",
+        "* Replace NaN values with 'others' for heading Country.\n"
       ]
     },
     {
